Fix spacing for smaller screens, box shadows, and button colors

--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -2,6 +2,7 @@
 .post-index-container {
   margin: 50px auto 30px auto;
   max-width: 1032px;
+  padding: 0 20px;
   font-family: 'Fira Sans', Geneva, Arial, sans-serif;
 }
 
