--- a/app/assets/stylesheets/util.scss
+++ b/app/assets/stylesheets/util.scss
@@ -19,19 +19,20 @@
 // header.jsx
 .nav-bar-container {
   height: 65px;
-  box-shadow: 0px 0px 10px rgba(200, 200, 200, 0.4);
+  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, .15);
 }
 
 .nav-bar {
   justify-content: space-between;
   margin: auto;
-  width: 1030px;
+  width: 1032px;
+  padding: 0 20px;
 }
 
 .header-link {
   font-family: 'Playfair Display', Georgia, Cambria, serif;
   font-weight: 700;
-  font-size: 27px;
+  font-size: 32px;
 }
 
 
@@ -66,7 +67,7 @@
   height: 35px;
   border-radius: 99em;
   font-family: 'Fira Sans', Geneva, Arial, sans-serif;
-  font-size: 13px;
+  font-size: 14px;
   text-align: center;
   background: rgb(255, 255, 255);
   border: 1px solid rgb(82, 174, 79);
@@ -138,5 +139,5 @@
   background-size: 100%;
   background-color: rgb(255, 255, 255);
   border-radius: 4px;
-  box-shadow: 0px 2px 10px 0px rgb(192, 192, 192);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
 }
